[package]
name = "abc-rs"
version = "0.2.5"
edition = "2024"
license = "MIT"
description = "ABC rust bindings"
repository = "https://github.com/gipsyh/abc-rs"
authors = ["Yuheng Su <gipsyh.icu@gmail.com>"]

[dependencies]
aig = { path = "../aig-rs", version = "0.3.0" }
tempfile = "3.10.1"

[build-dependencies]
cc = "1.2.20"
